[workspace]
members = ["crates/*"]

[package]
name = "quep"
version = "0.1.0"
edition = "2021"

[features]
#default = ["qiskit"]
qiskit = ["pyo3"]

[dependencies]
# Crates
quep_derive = { path = "crates/derive" }
quep_utils = { path = "crates/utils" }
anyhow = "1.0.56"
dotenv = "0.15.0"

# Used
fehler = "1.0.0"
snafu = "0.7.0"
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.16.1", features = ["full"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
lazy_static = "1.4.0"
enum_dispatch = "0.3.7"
derive_more = "0.99.17"
async-trait = "0.1.52"
strum = "0.23.0"
strum_macros = "0.23.1"
futures = "0.3.21"
futures-async-stream = "0.2.5"
pyo3 = { version = "0.16.2", features = ["auto-initialize"], optional = true }
openqasm = "0.1.3"
walkdir = "2.3.2"

# For future
# serde = "1.0.136"
# chrono = { version = "0.4.19", features = ["serde"] }
# serde_json = "1.0.78"
# itertools = "0.10.3"
# regex = "1.5.4"
# typed-builder = "0.9.1"
# quick-xml = { version = "0.22.0", features = ["serialize"] }
# num-traits = "0.2.14"
# stream-flatten-iters = "0.2.0"
# pretty_assertions = "1.1.0"
