[workspace]
members = ["crates/*"]

[package]
name = "quep"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crates
quep_derive = { path = "crates/derive" }
quep_utils = { path = "crates/utils" }
anyhow = "1.0.56"
dotenv = "0.15.0"

# Used
fehler = "1.0.0"
snafu = "0.7.0"
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.16.1", features = ["full"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
lazy_static = "1.4.0"
enum_dispatch = "0.3.7"
derive_more = "0.99.17"
async-trait = "0.1.52"
strum = "0.24.0"
strum_macros = "0.24.0"
futures = "0.3.21"
futures-async-stream = "0.2.5"
pyo3 = { version = "0.16.2", features = ["auto-initialize"] }
openqasm = { version = "0.1.3", features = ["ariadne", "pretty", "serde"] }
walkdir = "2.3.2"
cli-table = "0.4.6"
termcolor = "1.1.3"
regex = "1.5.5"
wchar = "0.11.0"
unindent = "0.1.8"
load_file = "1.0.1"
dunce = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
typed-builder = "0.10.0"
num-traits = "0.2.14"
unwrap-infallible = "0.1.5"
quick-xml = { version = "0.22.0", features = ["serialize"] }
toml = "0.5.9"
ron = "0.7.0"
serde_yaml = "0.8.23"
rand = "0.8.5"
lazy_mut = "0.1.0"
json5 = "0.4.1"
collection_literals = "1.0.1"
itertools = "0.10.3"

[dev-dependencies]
pretty_assertions = "1.2.1"

# For future
# chrono = { version = "0.4.19", features = ["serde"] }
# itertools = "0.10.3"
# regex = "1.5.4"
# stream-flatten-iters = "0.2.0"
# pretty_assertions = "1.1.0"
