[package]
name = "quep_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "quepy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
tokio = "1.19.2"
quep = { path = "../../" }
anyhow = "1.0.58"
